--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <h1>Hello world</h1>
     <p>Daaaammmn</p>
-
+    <h2>Shut the hell up, you drok</h2>
 
 <script src="about.js"></script>
 </body>
